--- a/index.html
+++ b/index.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arima&family=Poppins:ital,wght@1,300&family=Source+Sans+Pro:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Donate-Website</title>
 </head>
 <body>
-    <h1>This is donate web site</h1>
+    
+    <section class="first-section">
+        <div id="first-div">
+            <h1 class="header-size"><b>Let’s Help Those Who Are More In Need</b></h1>
+            <h5  class="header-color">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</h5><br>
+            <a target="_blank" href="">Donate Now</a>
+        </div>
+    </section>
+
+
+    <section>
+        <h1>Donate Today</h1>
+        <h5>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</h5>
+        <div class="flexible-container">
+            <div>
+                <p> 100Tk </p>
+            </div>
+            <div>
+                <p> 200Tk </p>
+            </div>
+            <div>
+                <p> 300Tk </p>
+            </div>
+            <div>
+                <p> 400Tk </p>
+            </div>
+            <div>
+                <p> 500Tk </p>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 </html>
