--- a/index.html
+++ b/index.html
@@ -15,32 +15,37 @@
     <section class="first-section">
         <div id="first-div">
             <h1 class="header-size"><b>Let’s Help Those Who Are More In Need</b></h1>
-            <h5  class="header-color">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</h5><br>
-            <a target="_blank" href="">Donate Now</a>
+            <h5  class="header-color">"Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. <br> No duo populo animal noluisse, enim"</h5><br>
+            <a class="button" target="_blank" href="">Donate Now</a>
         </div>
     </section>
 
 
-    <section>
-        <h1>Donate Today</h1>
-        <h5>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</h5>
+    <section id="second-section">
+        <h1 id="second-header">Donate Today</h1>
+        <small>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. <br> No duo populo animal noluisse, enim</small>
         <div class="flexible-container">
-            <div>
+            <div class="box-shadow">
                 <p> 100Tk </p>
             </div>
-            <div>
+            <div class="box-shadow">
                 <p> 200Tk </p>
             </div>
-            <div>
+            <div id="marking-amount">
                 <p> 300Tk </p>
             </div>
-            <div>
+            <div class="box-shadow">
                 <p> 400Tk </p>
             </div>
-            <div>
+            <div class="box-shadow">
                 <p> 500Tk </p>
             </div>
-        </div>
+        </div><br>
+       <div>
+        <input type="text" placeholder="Other Amount (Taka)"><br><br>
+        <a class="button" target="_blank" href="">Donate Now</a>
+       </div>
+        
     </section>
 
 
