--- a/index.html
+++ b/index.html
@@ -45,7 +45,47 @@
         <input type="text" placeholder="Other Amount (Taka)"><br><br>
         <a class="button" target="_blank" href="">Donate Now</a>
        </div>
+
+
         
+    </section>
+        
+
+    <section id="third-section">
+        <h1 id="second-header">Our Donate Plan</h1>
+        <small>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. <br> No duo populo animal noluisse, enim</small>
+
+        <div class="flexible-container">
+            <div id="second-box-shadow">
+                <img src="icons/food.png" alt="">
+                <h1>Food For Family</h1>
+                <p>Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit</p>
+            </div>
+
+            <div id="third-box-shadow">
+                <img src="icons/shelter.png" alt="">
+                <h1>Shelter for a family</h1>
+                <p>Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit</p>
+            </div>
+
+            <div id="fourth-box-shadow">
+                <img src="icons/Frame-1.png" alt="">
+                <h1>Education for a child</h1>
+                <p>Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit.</p>
+            </div>
+
+        </div>
+
+
     </section>
 
 
