--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <div class="flexible-container">
             <div id="second-box-shadow">
-                <img src="icons/food.png" alt="">
+                <img class="img" src="icons/food.png" alt="">
                 <h1>Food For Family</h1>
                 <p>Amet minim mollit non deserunt 
                     ullamco est sit aliqua dolor do amet 
@@ -66,7 +66,7 @@
             </div>
 
             <div id="third-box-shadow">
-                <img src="icons/shelter.png" alt="">
+                <img class="img" src="icons/shelter.png" alt="">
                 <h1>Shelter for a family</h1>
                 <p>Amet minim mollit non deserunt 
                     ullamco est sit aliqua dolor do amet 
@@ -75,7 +75,7 @@
             </div>
 
             <div id="fourth-box-shadow">
-                <img src="icons/Frame-1.png" alt="">
+                <img class="img" src="icons/Frame-1.png" alt="">
                 <h1>Education for a child</h1>
                 <p>Amet minim mollit non deserunt 
                     ullamco est sit aliqua dolor do amet 
@@ -86,6 +86,18 @@
         </div>
 
 
+    </section>
+
+
+    <section id="optional-section-one">
+        <h1 id="second-header">Get My Updates</h1>
+        <small>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+            deterruisset. <br> No duo populo animal noluisse, enim</small><br><br>
+        <div id="form-div">
+            <form action="method">
+                <input type="email" placeholder="Enter Your E-mail" > <input id="suscribe" type="submit" value="Suscribe">
+            </form>
+        </div>
     </section>
 
 
