Footer and optional section

--- a/index.html
+++ b/index.html
@@ -85,7 +85,16 @@
 
         </div>
 
+     </section>
 
+    <section class="flexible-container">
+        <div id="text-div">
+            <h1>Help's Effected People For Their Child</h1>
+            <p>Childs are more helpless the others. They Done nothing during bad situation. They just try to explore their situation by emotional reaction.</p>
+        </div>
+        <div>
+            <img id="img-tag" src="images/bony-6.22.jpg" alt="">
+        </div>
     </section>
 
 
@@ -98,8 +107,12 @@
                 <input type="email" placeholder="Enter Your E-mail" > <input id="suscribe" type="submit" value="Suscribe">
             </form>
         </div>
-    </section>
+    </section> <br><br><br><br>
 
+<footer class="class-footer">
+    <h1 id="f-heading">Be Humble</h1>
+    <small>I Gonna Do It</small>
+</footer>
 
 </body>
 </html>
