--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Arima&family=Poppins:ital,wght@1,300&family=Source+Sans+Pro:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Donate-Website</title>
+    <link rel="shortcut icon" type="image/jpg" href="images/donation9.jpg"/>
 </head>
 <body>
  
